# hf-articles-search

./: Dockerfile  README.md  data_upload.py  docker-compose.yml  pyproject.toml  tools_checker.py  transformations.py
alembic/: env.py
alembic/versions/: 19afa3968cb2_upgraded_link_hash_length_and_added_new_.py  31e51601ef45_changed_summarization_type_from_varchar_.py  439b51d25c45_add_index_to_tag.py  aaf8f45c98b3_add_article_tables.py  ba03da2e86f1_add_hnsw_index_for_embedding_column.py
app/: config.py  main.py
app/api/: data_upload.py  search_articles.py
app/data/: science_category.jsonl  science_category_llm_summaries.jsonl
app/data/batch/: science_category_batch_0.jsonl  science_category_batch_1.jsonl  science_category_batch_10.jsonl  science_category_batch_11.jsonl  science_category_batch_12.jsonl  science_category_batch_131.jsonl  science_category_batch_132.jsonl  science_category_batch_14.jsonl  science_category_batch_15.jsonl  science_category_batch_16.jsonl  science_category_batch_17.jsonl  science_category_batch_18.jsonl  science_category_batch_19.jsonl  science_category_batch_2.jsonl  science_category_batch_20.jsonl  science_category_batch_3.jsonl  science_category_batch_4.jsonl  science_category_batch_5.jsonl  science_category_batch_6.jsonl  science_category_batch_7.jsonl  science_category_batch_8.jsonl  science_category_batch_9.jsonl
app/data/llm/: summarized_articles_0.jsonl  summarized_articles_1.jsonl  summarized_articles_10.jsonl  summarized_articles_11.jsonl  summarized_articles_12.jsonl  summarized_articles_131.jsonl  summarized_articles_132.jsonl  summarized_articles_14.jsonl  summarized_articles_15.jsonl  summarized_articles_16.jsonl  summarized_articles_17.jsonl  summarized_articles_18.jsonl  summarized_articles_19.jsonl  summarized_articles_2.jsonl  summarized_articles_20.jsonl  summarized_articles_3.jsonl  summarized_articles_4.jsonl  summarized_articles_5.jsonl  summarized_articles_6.jsonl  summarized_articles_7.jsonl  summarized_articles_8.jsonl  summarized_articles_9.jsonl
app/models/: __init__.py  articles.py  utils.py
app/routers/: search_articles.py
app/schemas/: batch_response_output.py  search_articles.py
app/services/: database.py
app/transformations/: batch_summarizer.py  extractor.py  scrapper.py
tests/: conftest.py  test_articles_search.py  test_data_upload.py
